# rust-exercise-v2

./: .gitignore  Cargo.toml  README.md
function_exercise/: Cargo.toml
function_exercise/src/: main.rs
loop_exercise/: Cargo.toml
loop_exercise/src/: main.rs
macro_rules/exercise_01/: Cargo.toml
macro_rules/exercise_01/src/: demo.rs  designator_use_case.rs  main.rs
trait_exercise/: Cargo.toml
trait_exercise/src/: main.rs
traits_exercise/: Cargo.toml
traits_exercise/src/: example01.rs  example02.rs  main.rs
