workspace = { members = ["macro_rules/exercise_01"] }
[package]
name = "rust-exercise"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "macro_rules"
path = "macro_rules/exercise_01/src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
