[package]
name = "exercise_01"
version = "0.1.0"
edition = "2021"
authors = ["kevinsheeranxyj@gmail.com"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.202", features = ["derive"] }
bincode = "2.0.0-rc.3"
